// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`capture init init with --stdout 1`] = `
"capture:
  abc.yml:
    # Complete reference documentation for this configuration file is available:
    #   https://github.com/opticdev/optic/wiki/Using-Optic-Capture-with-Integration-Tests

    # Run with "optic capture abc.yml --update interactive"
    server:
      url: https://echo.o3c.org
    requests:
      send:
        - path: /users
          headers:
            x-response-json: '[{"id":0, "name":"aidan"}]'
        - path: /users/create
          method: POST
          data:
            name: nic
          headers:
            x-response-json: '{"id":1, "name":"nic"}'
            x-response-code: "201"


"
`;

exports[`capture init init with existing optic.yml 1`] = `
"[32m✔[39m Wrote capture config to optic.yml
Run [1moptic capture abc.yml --update interactive[22m
"
`;

exports[`capture init init with existing optic.yml 2`] = `
"ruleset:
  - breaking-changes
  - naming:
      pathComponents: camelCase
  - '@org/custom-ruleset'
  - ./rules/local.js
capture:
  openapi.yml:
    server:
      command: node server.js
      url: http://localhost:3000
      ready_endpoint: /healthcheck
    requests:
      send:
        - path: /
        - path: /books
          method: GET
        - path: /books/asd
          method: GET
        - path: /books/def
          method: GET
        - path: /books/asd
          method: POST
          data:
            name: asd
            price: 1
            author_id: 6nTxAFM5ck4Hob77hGQoL
        - path: /authors
          method: GET
  abc.yml:
    # Complete reference documentation for this configuration file is available:
    #   https://github.com/opticdev/optic/wiki/Using-Optic-Capture-with-Integration-Tests

    # Run with "optic capture abc.yml --update interactive"
    server:
      url: https://echo.o3c.org
    requests:
      send:
        - path: /users
          headers:
            x-response-json: '[{"id":0, "name":"aidan"}]'
        - path: /users/create
          method: POST
          data:
            name: nic
          headers:
            x-response-json: '{"id":1, "name":"nic"}'
            x-response-code: "201"
"
`;

exports[`capture init init with no optic.yml 1`] = `
"[32m✔[39m Wrote capture config to optic.yml
Run [1moptic capture abc.yml --update interactive[22m
"
`;

exports[`capture init init with no optic.yml 2`] = `
"capture:
  abc.yml:
    # Complete reference documentation for this configuration file is available:
    #   https://github.com/opticdev/optic/wiki/Using-Optic-Capture-with-Integration-Tests

    # Run with "optic capture abc.yml --update interactive"
    server:
      url: https://echo.o3c.org
    requests:
      send:
        - path: /users
          headers:
            x-response-json: '[{"id":0, "name":"aidan"}]'
        - path: /users/create
          method: POST
          data:
            name: nic
          headers:
            x-response-json: '{"id":1, "name":"nic"}'
            x-response-code: "201"
"
`;
